--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,31 @@
   box-sizing:border-box;  
 }
 
+/*********************/
+/* FONTS */
+/*********************/
+
+@font-face {
+    font-family: "Union Regular";
+    src: url("../fonts/union_regular.woff2") format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Union Italic";
+    src: url("../fonts/union_regular_italic.woff2") format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
 
 
-
+@font-face {
+    font-family: "Union Ribbon";
+    src: url("../fonts/union_sma_ribbon.woff2") format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 /*********************/
@@ -15,17 +37,38 @@
 /*********************/
 :root {
 	/* startje */
-	--color-text:#111;
-	--color-background:#eee;
+	--color-black:#000000;
+	--color-white:#ffffff;
+	--color-book:#22ff06;
+	--color-link-hover: #EBEAE8;
+	--color-textlink-hover: #9E9E9C;
+	--color-unbubble: #FFD515;
+	--color-essentials: #43BCBC;
 }
-
-
-
-
 
 /****************/
 /* JOUW STYLING */
 /****************/
+body {
+	background-color: var(--color-white);
+}
 
-/* jouw code */
+header {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000000;
+	background-color: var(--color-white);
+}
+
+footer {
+	margin-top: 1em;
+	background-color: var(--color-black);
+	color: var(--color-white);
+}
+
+
+/* h1, h2, h3, p, a, figcaption {
+	color: var(	--color-black);
+} */
 
