--- a/styles/style.css
+++ b/styles/style.css
@@ -180,7 +180,7 @@ a {
 header > a:nth-of-type(1) {
 	background-color: var(--color-book);
 	padding: .5em;
-	margin: 1em;
+	margin: 10em;
 	font-size:1em;
 
 }
@@ -194,6 +194,43 @@ li {
 	list-style-type: none; 
   
 }
+
+header section h2 {
+	font-size: 4.5em;
+}
+header section h3 {
+	font-size: 1.5em;
+}
+
+header section > a:nth-of-type(2) {
+	background-color: var(--color-book);
+	padding: .5em;
+	margin: 10em;
+	font-size:1em;
+}
+
+header section section li {
+	margin: 0.5em;
+}
+
+header section section ul:nth-of-type(1){
+	display: flex;
+	flex-direction: column
+}
+
+header section section ul:nth-child(1){
+	flex-direction: column;
+}
+
+
+
+
+
+
+
+
+
+
 
 footer {
 	margin-top: 1em;
